--- a/src/app/home/home/home.component.html
+++ b/src/app/home/home/home.component.html
@@ -68,7 +68,7 @@
           </div>
           <div class="col-md-3 ">
             
-    <legend>Login here</legend>
+    <legend>Login Here</legend>
     <div class="form-group">
         <label for="Email" >UserName</label>
         <input type="text" class="form-control" id="email" name="email" placeholder="email"
@@ -81,19 +81,19 @@
         [(ngModel)]="password"
         >
     </div>
-    <div class="form-group" >
+    <div class="form-group" style="text-align: center;">
     <table style="text-align: center;">
         <tr>
-            <td style="position: static;" > <button type="button" (click)="SignIn()" class="btn btn-primary " style="width: 190px;">Sign in</button></td>
+            <td style="position: static;" > <button type="button" (click)="SignIn()" class="btn btn-primary " style="width: 310px;">Sign in</button></td>
         </tr>
         <br>
         <tr> 
-          <td ><button type="button" class="btn btn-success " (click)="RegisterAsPolice()" style="width: 190px">Register as Police</button></td>
+          <td ><button type="button" class="btn btn-success " (click)="RegisterAsPolice()" style="width: 310px">Register as Police</button></td>
         </tr>
 
         <br>
         <tr> 
-          <td ><button type="button" class="btn btn-success " (click)="RegisterAsNgo()"style="width: 190px;">Register as Ngo</button></td>
+          <td ><button type="button" class="btn btn-success " (click)="RegisterAsNgo()"style="width: 310px;">Register as Ngo</button></td>
         </tr>
     </table> 
     </div>
