--- a/src/app/ngo/ngo/ngo.component.html
+++ b/src/app/ngo/ngo/ngo.component.html
@@ -19,11 +19,10 @@
           </div> 
           <div class="collapse navbar-collapse" id="myNavbar">
             <ul class="nav navbar-nav">
-              <li class="active"><a href="#">All Cases</a></li>
-              <li><a href="#">Gallery</a></li>
-              <li><a href="#">Statistics</a></li>
-              <li><a href="#">Orgnisations</a></li>
-              <li><a href="#">Inbox</a></li>
+              <li class="active"><a routerLink="/ngo">Home</a></li>
+              <li><a routerLink="/cases">Cases</a></li>
+              <li><a routerLink="/search">Search</a></li>
+              <li><a routerLink="/ngoinbox">Inbox</a></li>
             </ul>
           </div>
 
