--- a/src/app/police/search/search.component.html
+++ b/src/app/police/search/search.component.html
@@ -1,1 +1,5 @@
-<p>search works!</p>
+<h1>Search Missing Victim</h1>
+<div class="form-group">
+    <input type="text" class="form-control" placeholder="Search Victim By Name">
+  </div>
+  <button type="button" (click)="onSearch()" class="btn btn-default">Search By Name</button>
