--- a/src/app/police/policehome/policehome.component.html
+++ b/src/app/police/policehome/policehome.component.html
@@ -23,7 +23,16 @@
               <li><a  routerLink="/policehome/regcase">Register Case</a></li>
               <li><a  routerLink="/policehome/cases">Cases</a></li>
               <li><a  routerLink="/policehome/search">Search</a></li>
-              <li><a  routerLink="/policehome/inbox">Inbox</a></li>
+              <li>
+                <a  routerLink="/policehome/inbox">Inbox</a>
+              </li>
+              <li>
+                <a routerLink="/policehome/ngolist">NGO's</a>
+              </li>
+
+              <li>
+                  <a routerLink="/policehome/updatepolice">Update Profile</a>
+                </li>
             </ul>
           </div>
 
