--- a/src/app/police/regcase/regcase.component.html
+++ b/src/app/police/regcase/regcase.component.html
@@ -4,59 +4,59 @@
   <div class="col-md-5">
       <div class="form-group">
           <label for="">Full Name</label>
-          <input [(ngModel)]="victim.name" type="text" class="form-control">
+          <input [(ngModel)]="god.name" type="text" class="form-control">
         </div>
         <div class="form-group">
           <label for="">Age</label>
-          <input [(ngModel)]="victim.age" type="number" class="form-control">
+          <input [(ngModel)]="god.age" type="number" class="form-control">
         </div>
         <div class="form-group">
             <label for="">Gender  </label>
             <br>
-             <input type="radio" value="Male" [(ngModel)]="victim.gendor"> Male 
-             <input type="radio" value="Female"[(ngModel)]="victim.gendor"> Female
-               <input type="radio" value="Other"[(ngModel)]="victim.gendor"> Other
+             <input type="radio" value="MALE" [(ngModel)]="god.gendor"> Male 
+             <input type="radio" value="FEMALE"[(ngModel)]="god.gendor"> Female
+               <input type="radio" value="OTHER"[(ngModel)]="god.gendor"> Other
             
          </div>
         <div class="form-group">
               <label for="">Height(in feet)</label>
-              <input [(ngModel)]="victim.height" type="text" class="form-control">
+              <input [(ngModel)]="god.height" type="text" class="form-control">
        </div>
        <div class="form-group">
           <label for="">Blood Group</label>
-          <input [(ngModel)]="victim.bgrp" type="text" class="form-control">
+          <input [(ngModel)]="god.bgrp" type="text" class="form-control">
         </div>
         <div class="form-group">
           <label for="">Date Of Birth(yyyy-MM-dd)</label>
-          <input [(ngModel)]="victim.dob" type="text" class="form-control">
+          <input [(ngModel)]="god.dob" type="text" class="form-control">
         </div>
         
       </div>
   <div class="col-md-4">
     <div class="form-group">
       <label for="">City</label>
-      <input [(ngModel)]="address.city" type="text" class="form-control">
+      <input [(ngModel)]="god.city" type="text" class="form-control">
     </div>
     <div class="form-group">
       <label for="">State</label>
-      <input [(ngModel)]="address.state" type="text" class="form-control" >
+      <input [(ngModel)]="god.state" type="text" class="form-control" >
     </div>
 
     <div class="form-group">
         <label for="">Country</label>
-        <input [(ngModel)]="address.country" type="text" class="form-control">
+        <input [(ngModel)]="god.country" type="text" class="form-control">
       </div>
    <div class="form-group">
         <label for="">Phone number of missing person</label>
-        <input [(ngModel)]="address.phoneno" type="text" class="form-control">
+        <input [(ngModel)]="god.phoneno" type="text" class="form-control">
       </div>
       <div class="form-group">
           <label for="">Missing Date(yyyy-MM-dd)</label>
-          <input [(ngModel)]="victim.missingDate" type="text" class="form-control">
+          <input [(ngModel)]="god.missingDate" type="text" class="form-control">
         </div>
         <div class="form-group">
             <label for="">Complainant number</label>
-            <input [(ngModel)]="victim.complainantNo" type="text" class="form-control">
+            <input [(ngModel)]="god.complainantNo" type="text" class="form-control">
           </div>
    </div>
 </div>
