--- a/src/app/admin/admin/admin.component.html
+++ b/src/app/admin/admin/admin.component.html
@@ -1,60 +1,48 @@
+
+<div class="row" style="height: 70px;">
+  <div class="col-md-12">
+    <h1>Admin Home</h1>
+      <input type="button" class="btn btn-danger" value="logout" (click)="logout()" 
+      style="position: absolute; top: 30px;left: 1200px;" >       
+  </div>
+ </div>
 <br>
-<div class="container" style="background-color:yellow; width: 96%;
- height: 130px;" >
- <h1 style="text-align: center; font-family: 'Courier New', Courier, monospace; color: maroon;">Admin Home</h1>
- 
- <input type="button" class="btn btn-danger" value="logout" (click)="logout()" 
- style="position: absolute; top: 30px;left: 1200px;" >  
-</div>
-<br>
-<nav class="navbar " style="left: 2%; width: 96%;background:lightblue;">
-        <div class="container-fluid">
-           <div class="navbar-header">
-             <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>                        
-            </button> 
-          </div> 
-          <div class="collapse navbar-collapse" id="myNavbar">
+<nav class="navbar navbar-inverse" style="left: 2%; width: 96%;">
+        
+        <div class="collapse navbar-collapse" id="myNavbar">
             <ul class="nav navbar-nav">
-              <li class="active"><a routerLink="/admin">Home</a></li>
-              <li><a routerLink="/users">Users</a></li>
-              <li><a routerLink="/cases">Cases</a></li>
-              <li><a routerLink="/adduser">Add user</a></li>
-              <li><a routerLink="/search">Search</a></li>
-              <li><a routerLink="/admininbox">Inbox</a></li>
+              <li class="active"><a routerLink="/admin/adminhome">Home</a></li>
+              <li><a routerLink="/admin/users">Users</a></li>
+              <li><a routerLink="/admin/allcases">Cases</a></li>
+              <li><a routerLink="/admin/adduser">Add user</a></li>
+              <li><a routerLink="/admin/search">Search</a></li>
+              <li><a routerLink="/admin/admininbox">Inbox</a></li>
             </ul>
           </div>
-
-        </div>
+     
       </nav>
         
       <div class="container-fluid text-center">    
         <div class="row content">
-          <div class="col-md-5 sidenav">
+          <div class="col-md-3 sidenav">
             
             <div class="jumbotron" style="text-align: left;">
               <h2>News</h2>
               <p> Contents to be added... </p>
               </div>
           </div>
-          <div class="col-md-7 text-left"> 
-            
-            <div class="jumbotron">
-              <div class="container">
-                <h1>Welcome to Admin Home</h1>
-                <p style="text-align: justify;"> This portal is help to manage human anti-trafficking
-                    cases for police and releated NGO's.  </p>
-                  <h3 style="font-weight: 600;"> What is Human Trafficking ?</h3>
-                  <p> ...static data...</p>
-              </div>
+          <div class="col-md-9 text-left"> 
+              <router-outlet></router-outlet>
             </div>
             
-      
-      <footer class="container-fluid text-center">
-        <p>This portal is developed for CDAC project by Vaibhav Aware</p>
+  <div class="row">
+  <div class="col-md-12">
+    <footer class="container-fluid text-center">
+        <p>This portal is developed under CDAC project by Vaibhav Aware</p>
       </footer>
 
+  </div>
+</div>
+      
 
-<router-outlet></router-outlet>
+
