--- a/src/app/admin/admin/admin.component.html
+++ b/src/app/admin/admin/admin.component.html
@@ -15,7 +15,8 @@
               <li><a routerLink="/admin/users">Users</a></li>
               <li><a routerLink="/admin/allcases">Cases</a></li>
               <li><a routerLink="/admin/adduser">Add user</a></li>
-              <li><a routerLink="/admin/search">Search</a></li>
+              <li><a routerLink="/admin/searchpc">Search</a></li>
+              <li><a routerLink="/admin/addngpo">Add NGO/POLICE</a></li>
               <li><a routerLink="/admin/admininbox">Inbox</a></li>
             </ul>
           </div>
