--- a/src/app/admin/users/users.component.html
+++ b/src/app/admin/users/users.component.html
@@ -1,4 +1,4 @@
-<h1>List of all NGO's Currently associated with us</h1>
+<h1>List of all Users Associated With us</h1>
 <div class="table-responsive">
     
     <table class="table table-striped table-hover">
