--- a/src/app/home/front/front.component.html
+++ b/src/app/home/front/front.component.html
@@ -1,4 +1,4 @@
-<div class="jumbotron">
+<!-- <div class="jumbotron">
         <div class="container">
           <h1>Welcome..</h1>
           <p style="text-align: justify;"> This portal is help to manage human anti-trafficking
@@ -6,4 +6,4 @@
             <h3 style="font-weight: 600;"> What is Human Trafficking ?</h3>
             <p> ...static data...</p>
         </div>
-      </div>
+      </div> -->
