--- a/src/app/police/search/search.component.html
+++ b/src/app/police/search/search.component.html
@@ -1,6 +1,6 @@
 <h1>Search Missing Victim</h1>
 <div class="form-group">
-    <label for="Email" >UserName</label>
+    <label for="Name" >Name</label>
     <input type="text" class="form-control" id="username" name="username" placeholder="enter name"
     [(ngModel)]="username" required    >
 </div>
