--- a/src/app/admin/admin/admin.component.html
+++ b/src/app/admin/admin/admin.component.html
@@ -18,6 +18,8 @@
               <li><a routerLink="/admin/searchpc">Search</a></li>
               <li><a routerLink="/admin/addngpo">Add NGO/POLICE</a></li>
               <li><a routerLink="/admin/admininbox">Inbox</a></li>
+              <li><a routerLink="/admin/requests">Requests</a></li>
+              <li><a routerLink="/admin/searchuser">Search User</a></li>
             </ul>
           </div>
      
