--- a/src/app/police/policreg/policreg.component.html
+++ b/src/app/police/policreg/policreg.component.html
@@ -1,60 +1,67 @@
-<h1 style="text-align: center">Police Registeration Form</h1>
+<h1 style="text-align: center ;color: crimson;">Police Registeration Form</h1>
 
 <div class="row" >
-  <div class="col-md-3"></div>
-  <div class="col-md-6">
+  <div class="col-md-1"></div>
+  <div class="col-md-5">
     <div class="form-group">
       <label for="">Full Name</label>
-      <input [(ngModel)]="name" type="text" class="form-control">
+      <input [(ngModel)]="god.name" type="text" class="form-control">
     </div>
     <div class="form-group">
       <label for="">Email</label>
-      <input [(ngModel)]="email" type="email" class="form-control">
+      <input [(ngModel)]="god.email" type="email" class="form-control">
     </div>
     <div class="form-group">
       <label for="">Phone</label>
-      <input [(ngModel)]="phoneno" type="text" class="form-control">
+      <input [(ngModel)]="god.phoneno" type="text" class="form-control">
     </div>
     <div class="form-group">
       <label for="">City</label>
-      <input [(ngModel)]="city" type="text" class="form-control">
+      <input [(ngModel)]="god.city" type="text" class="form-control">
     </div>
     <div class="form-group">
       <label for="">State</label>
-      <input [(ngModel)]="state" type="text" class="form-control" >
+      <input [(ngModel)]="god.state" type="text" class="form-control" >
     </div>
 
     <div class="form-group">
         <label for="">Country</label>
-        <input [(ngModel)]="country" type="text" class="form-control">
+        <input [(ngModel)]="god.country" type="text" class="form-control">
       </div>
+         
+   
+  </div>
+  <div class="col-md-5">
+   
     <div class="form-group">
         <label for="">Department Name</label>
-        <input [(ngModel)]="deptname" type="text" class="form-control">
+        <input [(ngModel)]="god.deptname" type="text" class="form-control">
       </div>
       <div class="form-group">
         <label for="">Department City</label>
-        <input [(ngModel)]="deptcity" type="text" class="form-control">
+        <input [(ngModel)]="god.deptcity" type="text" class="form-control">
       </div>
       <div class="form-group">
         <label for="">Department State</label>
-        <input [(ngModel)]="deptstate" type="text" class="form-control">
+        <input [(ngModel)]="god.deptstate" type="text" class="form-control">
       </div>
       <div class="form-group">
         <label for="">Department Country</label>
-        <input [(ngModel)]="deptcountry" type="text" class="form-control">
+        <input [(ngModel)]="god.deptcountry" type="text" class="form-control">
       </div>
       <div class="form-group">
         <label for="">Department Contact No</label>
-        <input [(ngModel)]="deptphoneno" type="text" class="form-control">
+        <input [(ngModel)]="god.deptphoneno" type="text" class="form-control">
       </div>
-      
-    <div class="form-group">
-        <label for="">Password</label>
-        <input [(ngModel)]="password" type="password" class="form-control">
-      </div>
-    <div class="form-group" style="text-align: center;">
-        <button (click)="onRegister()" class="btn btn-success">Register</button>
-    </div>
+      <div class="form-group">
+          <label for="">Password</label>
+          <input [(ngModel)]="god.password" type="password" class="form-control">
+        </div>
+  
+  </div>
+</div>
+<div class="col-md-12">
+  <div class="form-group" style="text-align: center;">
+    <button style="width: 100px;" (click)="onRegister()" class="btn btn-success">Register</button>
   </div>
 </div>
