--- a/src/app/home/home/home.component.html
+++ b/src/app/home/home/home.component.html
@@ -16,11 +16,18 @@
 </div>
 </div> -->
 
-<br>
-<div class="container" style="background:lightblue; width: 96%;
- height: 130px;" >
- <h1>Government Of India</h1>
- <h2>Anti-Trafficking Portal</h2>
+<div class="container-fluid" style=" width: 96%;
+ height: 150px;" >
+ <div class="row">
+  <div class="col-md-1">
+    <img src="assets/logo.jpg" style="height: 150px;width: 100px;">
+  </div>
+  <div class="col-md-10">
+    <h1>Government Of India</h1>
+    <h2>Human Anti-Trafficking Portal</h2>
+  </div>
+ </div>
+
 </div>
 <br>
 <nav class="navbar " style="left: 2%; width: 96%;background:lightblue;">
