--- a/src/app/ngo/ngo/ngo.component.html
+++ b/src/app/ngo/ngo/ngo.component.html
@@ -9,50 +9,36 @@
 </div>
 <br>
 <nav class="navbar " style="left: 2%; width: 96%;background:lightblue;">
-        <div class="container-fluid">
-           <div class="navbar-header">
-             <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>                        
-            </button> 
-          </div> 
+        
           <div class="collapse navbar-collapse" id="myNavbar">
             <ul class="nav navbar-nav">
-              <li class="active"><a routerLink="/ngo">Home</a></li>
-              <li><a routerLink="/cases">Cases</a></li>
-              <li><a routerLink="/search">Search</a></li>
-              <li><a routerLink="/ngoinbox">Inbox</a></li>
+              <li class="active"><a routerLink="/ngo/ngohome">Home</a></li>
+              <li><a routerLink="/ngo/ngcases">Cases</a></li>
+              <li><a routerLink="/ngo/ngsearch">Search</a></li>
+              <li><a routerLink="/ngo/ngoinbox">Inbox</a></li>
+              <li><a routerLink="/ngo/ngusers">Users</a></li>
             </ul>
           </div>
 
-        </div>
       </nav>
         
       <div class="container-fluid text-center">    
         <div class="row content">
-          <div class="col-md-5 sidenav">
-            
-            <div class="jumbotron" style="text-align: left;">
-              <h2>News</h2>
-              <p> Contents to be added... </p>
-              </div>
-          </div>
-          <div class="col-md-7 text-left"> 
-            
-            <div class="jumbotron">
-              <div class="container">
-                <h1>Welcome to NGO Home</h1>
-                <p style="text-align: justify;"> This portal is help to manage human anti-trafficking
-                    cases for police and releated NGO's.  </p>
-                  <h3 style="font-weight: 600;"> What is Human Trafficking ?</h3>
-                  <p> ...static data...</p>
-              </div>
+          <div class="col-md-1"></div>
+          <div class="col-md-10">
+             <router-outlet></router-outlet>
             </div>
-            
-      
-      <footer class="container-fluid text-center">
-        <p>This portal is developed for CDAC project by Vaibhav Aware</p>
-      </footer>
+      </div>
+      </div>
 
+<div class="container-fluid">
+<div class="row">
+  <div class="col-md-12">
+    <footer class="container-fluid text-center">
+      <p>This portal is developed Under CDAC project by Vaibhav Aware</p>
+    </footer>
+  </div>
+</div>
+</div>
+    
 
